--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="raw">
 
-                <a href="http://127.0.0.1:5500/mandiro.html">
+                <a href="mandiro.html">
                     <img src="icon/tempal.png" height="400px" width="400px"alt="20">
                 </a> 
 
