--- a/dhingalitailor.html
+++ b/dhingalitailor.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Salingpur</title>
-        <link rel="stylesheet" href="dhingalitailor.css">
+        <link rel="stylesheet" href="salingpur.css">
     </head>
     <body>
         <div class="image">
