--- a/salingpur.html
+++ b/salingpur.html
@@ -14,7 +14,7 @@
         <div class="gam">સારંગપુર</div>
         <div class="mobile"></div>
         <a href="https://www.google.com/maps/dir//22.1588837,71.7709024/@22.1588722,71.7707852,20.75z/data=!4m2!4m1!3e0?authuser=0&entry=ttu">
-        <div class="Location"><button>રસ્તો/button></div></a>
+        <div class="Location"><button>રસ્તો</button></div></a>
 
         <div class="ads">
             <a href="
