--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 
         <div class="nav">
             <ul>
-                <li><a>હોમ પેજ</a></li>
-                <li><a>ગામ</a></li>
-                <li><a>જાહેરાતો</a></li>
-                <li><a>સંપર્ક</a></li>
+            
+                <a href=""><button><li>હોમ પેજ</li></button></a>
+                <a href=""><button><li>ગામ</li></button></a>
+                <a href="ads.html"><button><li>જાહેરાતો</li></button></a>
+                <a href="sampark.html"><button><li>સંપર્ક</li></button></a>
+                
             </ul>
         </div>
 
