--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         
         <title>Botad</title>
         <link rel="stylesheet" href="index.css">
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5579779888661708"
+     crossorigin="anonymous"></script>
     </head>
 
 
