--- a/mandiro.html
+++ b/mandiro.html
@@ -3,6 +3,9 @@
         <title>Mandiro</title>
         <link rel="stylesheet" href="mandiro.css">
 
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5579779888661708"
+     crossorigin="anonymous"></script>
+
 
 
     </head>
