--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="index.css">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5579779888661708"
      crossorigin="anonymous"></script>
+
+        google.com, pub-5579779888661708, DIRECT, f08c47fec0942fa0
     </head>
 
 
